@@ -1,6 +1,8 @@
 SVN/Unreleased
 ==============
 
+  - 'environment' can be used to specify environment variable on slaves [thefunny]
+
   - 'eggs' can be used to install extra eggs in slaves [thefunny]
 
 0.2.1 (2008-05-21)
